--- a/app/src/main/res/layout/content_gallery.xml
+++ b/app/src/main/res/layout/content_gallery.xml
@@ -9,9 +9,10 @@
 
     <EditText
         android:id="@+id/et_search"
-        android:visibility="gone"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:hint="Search"
+        android:visibility="gone" />
 
     <ImageView
         android:layout_width="match_parent"
@@ -23,8 +24,17 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="visible"
         tools:context="com.test.testapplication.GalleryActivity"
         tools:showIn="@layout/activity_gallery" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:indeterminate="true"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/tv_no_capture"
