--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
-    <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        tools:ignore="MenuTitle" />
-
     <item
         android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_list"
-        tools:ignore="MenuTitle" />
+        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:title="Dashboard" />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        tools:ignore="MenuTitle" />
+        android:id="@+id/navigation_grid"
+        android:icon="@drawable/ic_view_grid_black_24dp"
+        android:title="Grid View" />
+
+    <item
+        android:id="@+id/navigation_list"
+        android:icon="@drawable/ic_view_list_black_24dp"
+        android:title="List View" />
+
+    <item
+        android:id="@+id/navigation_search"
+        android:icon="@drawable/ic_search_black_24dp"
+        android:title="Search" />
 
 </menu>
