--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -7,26 +7,32 @@
     tools:context="com.test.testapplication.TestActivity">
 
     <android.support.design.widget.TabLayout
+        android:id="@+id/tabLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:tabGravity="fill"
+        app:tabMode="fixed">
 
         <android.support.design.widget.TabItem
+            android:id="@+id/ti_all"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout=""
             android:text="All" />
 
         <android.support.design.widget.TabItem
+            android:id="@+id/ti_in_process"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="In Process" />
 
         <android.support.design.widget.TabItem
+            android:id="@+id/ti_rejected"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Rejected" />
 
         <android.support.design.widget.TabItem
+            android:id="@+id/ti_processed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Processed" />
