--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -15,7 +15,8 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="0dp"
         android:layout_marginStart="0dp"
-        android:background="?android:attr/windowBackground"
+        android:fitsSystemWindows="true"
+        app:itemTextColor="@android:color/transparent"
         app:menu="@menu/navigation" />
 
     <android.support.design.widget.TabLayout
