--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,24 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <item
         android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="Dashboard" />
+        android:icon="@drawable/ic_dashboard"
+        android:title="Dashboard"
+        app:itemBackground="@drawable/nav_view_item_background"
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/navigation_grid"
-        android:icon="@drawable/ic_view_grid_black_24dp"
-        android:title="Grid View" />
+        android:icon="@drawable/ic_grid"
+        android:title="Grid View"
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/navigation_list"
-        android:icon="@drawable/ic_view_list_black_24dp"
-        android:title="List View" />
+        android:icon="@drawable/ic_list"
+        android:title="List View"
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/navigation_search"
-        android:icon="@drawable/ic_search_black_24dp"
-        android:title="Search" />
+        android:icon="@drawable/ic_search"
+        android:title="Search"
+        app:showAsAction="never" />
 
 </menu>
