--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -16,8 +16,19 @@
         android:layout_marginEnd="0dp"
         android:layout_marginStart="0dp"
         android:fitsSystemWindows="true"
+        android:visibility="gone"
         app:itemTextColor="@android:color/transparent"
         app:menu="@menu/navigation" />
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/actionTablayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="visible"
+        app:tabGravity="fill"
+        app:tabIndicatorColor="@android:color/transparent"
+        app:tabIndicatorHeight="0dp"
+        app:tabMode="fixed" />
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tabLayout"
