--- a/app/src/main/res/layout/custom_tab_item.xml
+++ b/app/src/main/res/layout/custom_tab_item.xml
@@ -1,16 +1,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
     android:gravity="center_vertical">
 
     <ImageView
-        android:id="@android:id/icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:id="@+id/icon"
+        android:layout_width="5dp"
+        android:layout_height="5dp"
+        android:layout_margin="5dp" />
 
     <TextView
-        android:id="@android:id/text1"
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textAllCaps="false" />
 
 </LinearLayout>
