--- a/app/src/main/res/menu/home.xml
+++ b/app/src/main/res/menu/home.xml
@@ -5,8 +5,7 @@
 
     <item
         android:id="@+id/menu_add"
-        android:icon="@android:drawable/ic_input_add"
+        android:icon="@drawable/ic_camera_ash"
         android:title="Add"
         app:showAsAction="always" />
-
 </menu>
